# TypographiaLib

./: CMakeLists.txt  FindFreeType.cmake  FindTypographiaLib.cmake  README.md
include/Typo/: Char.h  Config.h  Details.h  Font.h  FontGlyphSet.h  Image.h  MultiLineString.h  Point.h  Rect.h  SeparableString.h  Size.h  SystemFontPath.h  Terminal.h  TextField.h  TextFieldMultiLineString.h  TextFieldString.h  Typo.h
sources/: Font.cpp  FontGlyphSet.cpp  GlyphTree.cpp  GlyphTree.h  Image.cpp  MultiLineString.cpp  SeparableString.cpp  Terminal.cpp  TerminalStreamBuf.cpp  TerminalStreamBuf.h  TextField.cpp  TextFieldMultiLineString.cpp  TextFieldString.cpp
sources/Platform/Linux/: SystemFontPath.cpp
sources/Platform/MacOS/: SystemFontPath.cpp  SystemFontPath.mm
sources/Platform/Win32/: GetFontFile.cpp  GetFontFile.h  SystemFontPath.cpp
test/: matrix_digital_rain.cpp  matrix_digital_rain.ini  matrix_font.ttf License.txt  test1.cpp  test2.cpp  test3.cpp
